tket2/src/diff/snapshots/tket2__diff__replacement__test__replace_after_copy.snap
---
source: tket2/src/diff/replacement.rs
expression: new_diff
---
CircuitDiff {
    circuit_hash: RelRcHash(
        12320014010132083161,
    ),
    equivalent_wires: WireEquivalence {
        input_to_parent: {
            Wire {
                node: 1,
                port: OutgoingPort(
                    0,
                ),
            }: ParentWire {
                incoming_index: 0,
                wire: Wire {
                    node: 1,
                    port: OutgoingPort(
                        0,
                    ),
                },
            },
            Wire {
                node: 1,
                port: OutgoingPort(
                    1,
                ),
            }: ParentWire {
                incoming_index: 0,
                wire: Wire {
                    node: 1,
                    port: OutgoingPort(
                        0,
                    ),
                },
            },
        },
        output_to_parent: {
            Wire {
                node: 3,
                port: OutgoingPort(
                    0,
                ),
            }: {
                ParentWire {
                    incoming_index: 0,
                    wire: Wire {
                        node: 3,
                        port: OutgoingPort(
                            0,
                        ),
                    },
                },
            },
        },
        ..
    },
    parents: [
        (
            RelRcHash(
                1322336167454241560,
            ),
            {
                Node(
                    3,
                ),
            },
        ),
    ],
}
